เพิ่ม field Payer close #206
