# backend/docs/swagger.json
@@ -3013,6 +3013,9 @@
                 "dispenseMedicine": {
                     "type": "integer"
                 },
+                "payer": {
+                    "type": "string"
+                },
                 "payment": {
                     "type": "integer"
                 },
@@ -3159,6 +3162,10 @@
                 "id": {
                     "description": "ID of the ent.",
                     "type": "integer"
+                },
+                "payer": {
+                    "description": "Payer holds the value of the \"payer\" field.",
+                    "type": "string"
                 }
             }
         },
